--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_armory.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_armory.yml
@@ -3,7 +3,7 @@
   parent: BaseBlueprintArmoryNF
   id: BlueprintWeaponAntiqueLaserNF
   name: antique laser blueprint
-  description: A blueprint with a schematic of an antique laser. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of an antique laser. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -13,7 +13,7 @@
   parent: BaseBlueprintArmoryNF
   id: BlueprintWeaponLaserSvalinnNF
   name: svalinn pistol blueprint
-  description: A blueprint with a schematic of a svalinn pistol. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a svalinn pistol. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -23,7 +23,7 @@
   parent: BaseBlueprintArmoryNF
   id: BlueprintPortableRechargerNF
   name: portable recharger blueprint
-  description: A blueprint with a schematic of a portable recharger. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a portable recharger. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
