--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_medical.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_medical.yml
@@ -3,7 +3,7 @@
   parent: BaseBlueprintMedicalNF
   id: BlueprintBluespaceBeakerNF
   name: bluespace beaker blueprint
-  description: A blueprint with a schematic of a bluespace beaker. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a bluespace beaker. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -13,7 +13,7 @@
   parent: BaseBlueprintMedicalNF
   id: BlueprintSyringeBluespaceNF
   name: bluespace syringe blueprint
-  description: A blueprint with a schematic of a bluespace syringe. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a bluespace syringe. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -23,7 +23,7 @@
   parent: BaseBlueprintMedicalNF
   id: BlueprintVialBluespaceNF
   name: bluespace syringe blueprint
-  description: A blueprint with a schematic of a bluespace vial. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a bluespace vial. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
