--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_salvage.yml
@@ -3,7 +3,7 @@
   parent: BaseBlueprintSalvageNF
   id: BlueprintOreBagOfHoldingNF
   name: bluespace ore bag blueprint
-  description: A blueprint with a schematic of a bluespace ore bag. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a bluespace ore bag. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -13,7 +13,7 @@
   parent: BaseBlueprintSalvageNF
   id: BlueprintMiningDrillDiamondNF
   name: diamond tipped mining drill blueprint
-  description: A blueprint with a schematic of a diamond tipped mining drill. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a diamond tipped mining drill. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -23,7 +23,7 @@
   parent: BaseBlueprintSalvageNF
   id: BlueprintAdvancedMineralScannerEmptyNF
   name: advanced mineral scanner blueprint
-  description: A blueprint with a schematic of an advanced mineral scanner. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of an advanced mineral scanner. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -33,7 +33,7 @@
   parent: BaseBlueprintSalvageNF
   id: BlueprintClothingOuterHardsuitMaximPrototypeNF
   name: experimental salvager hardsuit blueprint
-  description: A blueprint with a schematic of an experimental salvager hardsuit. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of an experimental salvager hardsuit. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
