--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_service.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_service.yml
@@ -3,7 +3,7 @@
   parent: BaseBlueprintServiceNF
   id: BlueprintAdvMopItemNF
   name: advanced mop blueprint
-  description: A blueprint with a schematic of an advanced mop. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of an advanced mop. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -13,7 +13,7 @@
   parent: BaseBlueprintServiceNF
   id: BlueprintPlantAnalyzerEmptyNF
   name: plant analyzer blueprint
-  description: A blueprint with a schematic of a plant analyzer. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a plant analyzer. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -23,7 +23,7 @@
   parent: BaseBlueprintServiceNF
   id: BlueprintPlantBagOfHoldingNF
   name: bluespace plant bag blueprint
-  description: A blueprint with a schematic of a bluespace plant bag. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a bluespace plant bag. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
