--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_engineering.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_engineering.yml
@@ -3,7 +3,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintPowerDrillNF
   name: power drill blueprint
-  description: A blueprint with a schematic of a power drill. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a power drill. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -13,7 +13,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintJawsOfLifeNF
   name: jaws of life blueprint
-  description: A blueprint with a schematic of a jaws of life. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a jaws of life. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -23,7 +23,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintWelderExperimentalNF
   name: experimental welder blueprint
-  description: A blueprint with a schematic of an experimental welder. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of an experimental welder. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -33,7 +33,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintShipyardRCDAmmoNF
   name: shipyard compressed matter blueprint
-  description: A blueprint with a schematic of a shipyard compressed matter. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a shipyard compressed matter. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -44,7 +44,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintPowerCellMediumPrintedNF
   name: medium-capacity power cell blueprint
-  description: A blueprint with a schematic of a medium-capacity power cell. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a medium-capacity power cell. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -54,7 +54,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintPowerCellMicroreactorNF
   name: microreactor blueprint
-  description: A blueprint with a schematic of a microreactor. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a microreactor. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -65,7 +65,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintSignallerAdvancedNF
   name: advanced signaller blueprint
-  description: A blueprint with a schematic of an advanced signaller. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of an advanced signaller. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -75,7 +75,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintClothingBackpackHoldingNF
   name: bluespace backpack blueprint
-  description: A blueprint with a schematic of a bluespace backpack. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a bluespace backpack. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -85,7 +85,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintClothingBackpackSatchelHoldingNF
   name: bluespace satchel blueprint
-  description: A blueprint with a schematic of a bluespace satchel. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a bluespace satchel. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -95,7 +95,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintClothingBackpackMessengerHoldingNF
   name: bluespace messenger bag blueprint
-  description: A blueprint with a schematic of a bluespace messenger bag. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a bluespace messenger bag. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -105,7 +105,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintClothingBackpackDuffelHoldingNF
   name: bluespace duffel blueprint
-  description: A blueprint with a schematic of a bluespace duffel. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a bluespace duffel. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -115,7 +115,7 @@
   parent: BaseBlueprintEngineeringNF
   id: BlueprintConstructionBagOfHoldingNF
   name: bluespace construction bag blueprint
-  description: A blueprint with a schematic of a bluespace construction bag. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a bluespace construction bag. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
