--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_science.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_science.yml
@@ -3,7 +3,7 @@
   parent: BaseBlueprintScienceNF
   id: BlueprintRpedNF
   name: RPED blueprint
-  description: A blueprint with a schematic of a RPED. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a RPED. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -13,7 +13,7 @@
   parent: BaseBlueprintScienceNF
   id: BlueprintSuperCapacitorStockPartNF
   name: super capacitor blueprint
-  description: A blueprint with a schematic of a super capacitor. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a super capacitor. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -23,7 +23,7 @@
   parent: BaseBlueprintScienceNF
   id: BlueprintPicoManipulatorStockPartNF
   name: super manipulator blueprint
-  description: A blueprint with a schematic of a super manipulator. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a super manipulator. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -33,7 +33,7 @@
   parent: BaseBlueprintScienceNF
   id: BlueprintSuperMatterBinStockPartNF
   name: super matter bin blueprint
-  description: A blueprint with a schematic of a super matter bin. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of a super matter bin. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
@@ -43,7 +43,7 @@
   parent: BaseBlueprintScienceNF
   id: BlueprintClothingShoesBootsMagAdvNF
   name: advanced magboots blueprint
-  description: A blueprint with a schematic of an advanced magboots. It can be inserted into an autolathe.
+  description: A blueprint with a schematic of an advanced magboots. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
