--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_engineering.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_engineering.yml
@@ -48,7 +48,7 @@
   components:
   - type: Blueprint
     providedRecipes:
-    - PowerCellMediumPrinted
+    - PowerCellMedium
 
 - type: entity
   parent: BaseBlueprintEngineeringNF
