--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_service.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_service.yml
@@ -17,7 +17,7 @@
   components:
   - type: Blueprint
     providedRecipes:
-    - PlantAnalyzerEmpty
+    - PlantAnalyzer
 
 - type: entity
   parent: BaseBlueprintServiceNF
