stampable, edible, scaf blueprint

--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_armory.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_armory.yml
@@ -28,3 +28,13 @@
   - type: Blueprint
     providedRecipes:
     - PortableRecharger
+
+- type: entity
+  parent: BaseBlueprintArmoryNF
+  id: BlueprintClothingOuterHardsuitScaf
+  name: scaf hardsuit blueprint
+  description: A blueprint with a schematic of a scaf hardsuit. It can be inserted into an autolathe or a techfab.
+  components:
+  - type: Blueprint
+    providedRecipes:
+    - ClothingOuterHardsuitScaf
