--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -788,6 +788,7 @@
     - BlueprintWeaponAntiqueLaserNF
     - BlueprintWeaponLaserSvalinnNF
     - BlueprintPortableRechargerNF
+    - BlueprintClothingOuterHardsuitScaf
   - type: MaterialStorage
     whitelist:
       tags:
