--- a/Resources/Prototypes/_NF/Recipes/Lathes/blueprints.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/blueprints.yml
@@ -169,3 +169,8 @@
   parent: BaseBlueprintLatheRecipeNF
   id: BlueprintPortableRechargerNF
   result: BlueprintPortableRechargerNF
+
+- type: latheRecipe
+  parent: BaseBlueprintLatheRecipeNF
+  id: BlueprintClothingOuterHardsuitScaf
+  result: BlueprintClothingOuterHardsuitScaf
