Edit dwarf guidebook, move cryo/dorf to _NF

--- a/Resources/Prototypes/Guidebook/species.yml
+++ b/Resources/Prototypes/Guidebook/species.yml
@@ -5,7 +5,7 @@
   children:
     - Arachnid
     - Diona
-    - Dwarf
+    - Dwarf # Note: Frontier changes inside
     - Goblin # Frontier
     - Human
     - Moth
@@ -30,7 +30,7 @@
 - type: guideEntry
   id: Dwarf
   name: species-name-dwarf
-  text: "/ServerInfo/Guidebook/Mobs/Dwarf.xml"
+  text: "/ServerInfo/_NF/Guidebook/Mobs/Dwarf.xml" # Frontier: moved to _NF folder
 
 - type: guideEntry
   id: Human
