--- a/Resources/Prototypes/_NF/Catalog/Fills/Items/document_cases_expedition.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Items/document_cases_expedition.yml
@@ -3,7 +3,7 @@
   parent: WeaponCaseShortDocuments
   id: WeaponCaseShortDocumentsFilled
   suffix: Dungeon, Blueprints
-  #categories: [ HideSpawnMenu ]
+  categories: [ HideSpawnMenu ]
   components:
   - type: StorageFill
     contents:
