exped blueprints pricing

--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_base.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_base.yml
@@ -335,3 +335,5 @@
       stampType: RubberStamp
       stampedColor: '#1F66A0FF'
       stampedName: stamp-component-stamped-name-rd
+  - type: StaticPrice
+    price: 1000
