Add a label to implanters available in vendors

--- a/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/contravend.yml
+++ b/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/contravend.yml
@@ -15,7 +15,7 @@
     ClothingBackpackChameleonFill: 4
     HypopenBox: 4
     Emag: 2
-    StorageImplanter: 4
+    StorageImplanterLabeled: 4
     ClothingShoesBootsMagSyndie: 4
     ClothingShoesChameleonNoSlips: 8
     ClothingBackpackDuffelSyndicateEVABundle: 12
