--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -14,6 +14,7 @@
   - ShipyardBulker
   - ShipyardCamper
   - ShipyardCeres
+  - ShipyardCharon
   - ShipyardChisel
   - ShipyardComet
   - ShipyardConstruct
@@ -88,6 +89,11 @@
   id: ShipyardCeres
   name: guide-entry-shipyard-ceres
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Ceres.xml"
+
+- type: guideEntry
+  id: ShipyardCharon
+  name: guide-entry-shipyard-charon
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Charon.xml"
 
 - type: guideEntry
   id: ShipyardChisel
